hero section completed

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             },
             extend: {
               colors: {
-                
+                highlight: "#988762"
               }
             }
           }
@@ -46,5 +46,24 @@
             </div>
         </div>
     </nav>
+
+    <div class="hero">
+        <div>
+            <img src="./images/mobile/hero/one.jpg" alt="">
+        </div>
+
+        <div class="bg-black">
+            <div class="w-4/5 mx-auto">
+                <img src="./images/desktop/titles/one.svg" alt="">
+                <h1 class="text-white text-xl text-center mt-7 mb-4 font-bold">The Revolution Is Here</h1>
+                <p class="text-white text-center">The RØDECaster Pro II is the world's most powerful all-in-one audio solution for streamers, podcasters, musicians, and creators. Take your content to the next level.</p>
+                
+                <div class="py-10 text-center">
+                    <a class="text-highlight uppercase font-semibold mr-4" href="#">Learn more <i class="fa-solid fa-chevron-right"></i></a>
+                    <a class="bg-highlight px-4 py-1 rounded-full text-white uppercase" href="#">buy now</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
