--- a/index.html
+++ b/index.html
@@ -196,8 +196,58 @@
     </div>
 
     <footer>
+        <img class="w-fit mx-auto my-8" src="./images/footer.svg" alt="">
+
+        <div class="flex flex-wrap w-11/12 mx-auto gap-y-4">
+            <ul class="w-1/3">
+                <li class="font-semibold">Products</li>
+                <li>Microphones</li>
+                <li>Headphones</li>
+                <li>Interfaces and mixers</li>
+                <li>Accessories</li>
+                <li>Software</li>
+                <li>Apparel</li>
+            </ul>
+
+            <ul class="w-1/3">
+                <li class="font-semibold">Support</li>
+                <li>Contact Us</li>
+                <li>Service Centre</li>
+                <li>Warranty</li>
+                <li>Where to Buy</li>
+            </ul>
+
+            <ul class="w-1/3">
+                <li class="font-semibold">Company</li>
+                <li>About RODE</li>
+                <li>News and Info</li>
+                <li>Job Oppurtunities</li>
+            </ul>
+
+            <ul class="w-1/3">
+                <li class="font-semibold">Account</li>
+                <li>Manage your Account</li>
+                <li>Create Account</li>
+            </ul>
+        </div>
+
+        <div class="w-11/12 mx-auto text-center">
+            <h1 class="text-3xl my-7">Subscribe to our latest news and offers</h1>
+            <a class="capitalize text-white bg-highlight rounded-full px-4 py-2" href="#">sign up</a>
+        </div>
+
         <div>
-            <img class="" src="./images/footer.svg" alt="">
+            <p class="text-center my-5">Privacy Policy | Terms & Conditions</p>
+
+            <div class="flex text-highlight text-2xl w-3/4 mx-auto justify-evenly">
+                <p><i class="fa-brands fa-facebook"></i></p>
+                <p><i class="fa-brands fa-twitter"></i></p>
+                <p><i class="fa-brands fa-instagram"></i></p>
+                <p><i class="fa-brands fa-youtube"></i></p>
+                <p><i class="fa-brands fa-tiktok"></i></p>
+            </div>
+
+            <p class="text-center mt-4">© 2022 RØDE All Rights Reserved.</p>
         </div>
     </footer>
 </body>
