hero fully responsive

--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
     </nav>
 
     <div class="hero">
-        <div>
+        <div class="laptop:hidden">
             <img src="./images/mobile/hero/one.jpg" alt="">
         </div>
 
-        <div class="bg-black">
-            <div class="w-4/5 mx-auto">
+        <div class="bg-black laptop:bg-[url('./images/desktop/hero/one.jpg')] bg-contain bg-no-repeat">
+            <div class="w-4/5 mx-auto laptop:w-1/2 laptop:mx-0 laptop:ml-auto laptop:py-14 laptop:mr-14">
                 <img src="./images/desktop/titles/one.svg" alt="">
                 <h1 class="text-white text-xl text-center mt-7 mb-4 font-bold">The Revolution Is Here</h1>
                 <p class="text-white text-center">The RØDECaster Pro II is the world's most powerful all-in-one audio solution for streamers, podcasters, musicians, and creators. Take your content to the next level.</p>
