--- a/index.html
+++ b/index.html
@@ -171,29 +171,28 @@
                 </div>
             </div>
         </div>
-        
-
-
     </div>
 
     <div class="w-11/12 mx-auto things">
+        <h1 class="text-3xl text-center mb-4 font-semibold laptop:mt-14">Explore The RØDE Range</h1>
+
         <div class="relative mb-4">
-            <img src="./images/desktop/range/one.png" alt="">
+            <img class="w-full" src="./images/desktop/range/one.png" alt="">
             <h1 class="uppercase absolute text-3xl text-white top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">microphone</h1>
         </div>
 
         <div class="relative mb-4">
-            <img src="./images/desktop/range/two.jpg" alt="">
+            <img class="w-full" src="./images/desktop/range/two.jpg" alt="">
             <h1 class="uppercase absolute text-xl text-white top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">interface & mixers</h1>
         </div>
 
         <div class="relative mb-4">
-            <img src="./images/desktop/range/three.png" alt="">
+            <img class="w-full" src="./images/desktop/range/three.png" alt="">
             <h1 class="uppercase absolute text-3xl text-white top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">software</h1>
         </div>
 
         <div class="relative mb-4">
-            <img src="./images/desktop/range/four.png" alt="">
+            <img class="w-full" src="./images/desktop/range/four.png" alt="">
             <h1 class="uppercase absolute text-3xl text-white top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">accessories</h1>
         </div>
     </div>
@@ -201,8 +200,8 @@
     <div class="blog w-11/12 mx-auto">
         <h1 class="capitalize text-center text-2xl text-highlight font-semibold">latest from the RODE blog</h1>
     
-        <div>
-            <div>
+        <div class="laptop:flex laptop:flex-wrap justify-between laptop:gap-y-5">
+            <div class="laptop:w-2/5">
                 <h1 class="text-2xl text-center mt-7 mb-3">The Difference Between Large-Diaphragm and Small-Diaphragm Condenser Microphones</h1>
                 <img src="./images/desktop/blog/one.jpeg" alt="">
                 <p class="text-center w-9/12 mx-auto my-7">We explore the difference between large- and small-diaphragm condenser microphones, and what each is best used for.</p>
@@ -211,7 +210,7 @@
                 </div>
             </div>
 
-            <div>
+            <div class="laptop:w-2/5">
                 <h1 class="text-2xl text-center mt-7 mb-3">The Difference Between Large-Diaphragm and Small-Diaphragm Condenser Microphones</h1>
                 <img src="./images/desktop/blog/two.jpg" alt="">
                 <p class="text-center w-9/12 mx-auto my-7">We explore the difference between large- and small-diaphragm condenser microphones, and what each is best used for.</p>
@@ -220,7 +219,7 @@
                 </div>
             </div>
 
-            <div>
+            <div class="laptop:w-2/5">
                 <h1 class="text-2xl text-center mt-7 mb-3">The Difference Between Large-Diaphragm and Small-Diaphragm Condenser Microphones</h1>
                 <img src="./images/desktop/blog/three.jpg" alt="">
                 <p class="text-center w-9/12 mx-auto my-7">We explore the difference between large- and small-diaphragm condenser microphones, and what each is best used for.</p>
@@ -229,7 +228,7 @@
                 </div>
             </div>
 
-            <div>
+            <div class="laptop:w-2/5">
                 <h1 class="text-2xl text-center mt-7 mb-3">The Difference Between Large-Diaphragm and Small-Diaphragm Condenser Microphones</h1>
                 <img src="./images/desktop/blog/four.jpg" alt="">
                 <p class="text-center w-9/12 mx-auto my-7">We explore the difference between large- and small-diaphragm condenser microphones, and what each is best used for.</p>
@@ -284,7 +283,7 @@
         <div>
             <p class="text-center my-5">Privacy Policy | Terms & Conditions</p>
 
-            <div class="flex text-highlight text-2xl w-3/4 mx-auto justify-evenly">
+            <div class="flex text-highlight text-2xl w-3/4 mx-auto justify-evenly laptop:w-1/3">
                 <p><i class="fa-brands fa-facebook"></i></p>
                 <p><i class="fa-brands fa-twitter"></i></p>
                 <p><i class="fa-brands fa-instagram"></i></p>
